[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name =  "pythermia-logger"
authors = [
    {name = "Sergey Omelkov", email = "omelkovs@gmail.com"},
]
description = "A data logger/controller application for Thermia Genesis heat pumps"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8.1"
dynamic = ["version"]
dependencies = [
  'sqlite3 >= 3.10',
  'nordpool >= 0.3.3',
]

[project.optional-dependencies]
TCP = [
    "pythermiagenesis [TCP] >=0.1.8"
]
RTU = [
    "pythermiagenesis [RTU] >=0.1.8"
]

[project.urls]
Source = "https://github.com/aduc812/pythermia-logger"
